--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SmartWatts"
+        android:theme="@style/Theme.SmartWatts.Splash"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.SmartWatts">
+            android:theme="@style/Theme.SmartWatts.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".MainActivity" android:label="MainActivity"/>
+
+        <activity android:name=".CadastroActivity" android:label="Cadastro"/>
+
+        <activity android:name=".HomeActivity" android:label="Home"/>
+
+        <activity android:name=".FaturaActivity" android:label="FaturaActivity"/>
+
+        <activity android:name=".PerfilActivity" android:label="PerfilActivity"/>
+
+        <activity android:name=".DicasActivity" android:label="DicasActivity"/>
+
+
+
     </application>
 
 </manifest>
